<?xml version="1.0" encoding="utf-8"?>
<TableLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context=".MainActivity">
    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="2dip" >
        <Button
            android:id="@+id/add_button"
            android:text="@string/label_add"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="addFillup" />
        <Button
            android:id="@+id/showList_Button"
            android:text="@string/label_showList"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="showFillups" />
    </TableRow>
    <TableRow
        android:layout_marginTop="5dip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="2dip" >
        <TextView
            android:text="@string/label_fuelUsed"
            android:textSize="20sp"
            android:textStyle="bold|italic"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
        <TextView
            android:text="@string/label_moneySpent"
            android:textSize="20sp"
            android:textStyle="bold|italic"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
    </TableRow>
    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="2dip" >
        <TextView
            android:text="@string/label_fuelUsed_placeholder"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
        <TextView
            android:text="@string/label_moneySpent_placeholder"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
    </TableRow>
    <TableRow
        android:layout_marginTop="10dip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="2dip" >
        <TextView
            android:text="@string/label_distanceDriven"
            android:textSize="20sp"
            android:textStyle="bold|italic"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
        <TextView
            android:text="@string/label_mileage"
            android:textSize="20sp"
            android:textStyle="bold|italic"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
    </TableRow>
    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="2dip" >
        <TextView
            android:text="@string/label_distanceDriven_placeholder"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
        <TextView
            android:text="@string/label_mileage_placeholder"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
    </TableRow>
    <TableRow
        android:layout_marginTop="10dip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="2dip" >
        <TextView
            android:text="@string/label_lastFillup"
            android:textSize="20sp"
            android:textStyle="bold|italic"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
        <TextView
            android:text="@string/label_daysActive"
            android:textSize="20sp"
            android:textStyle="bold|italic"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
    </TableRow>
    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="2dip" >
        <TextView
            android:text="@string/label_lastFillup_placeholder"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
        <TextView
            android:text="@string/label_daysActive_placeholder"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
    </TableRow>
    <TableRow
        android:layout_marginTop="10dip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="2dip" >
        <TextView
            android:text="@string/label_streak"
            android:textSize="20sp"
            android:textStyle="bold|italic"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
        <TextView
            android:text="@string/label_cheapest"
            android:textSize="20sp"
            android:textStyle="bold|italic"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
    </TableRow>
    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="2dip" >
        <TextView
            android:text="@string/label_streak_placeholder"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
        <TextView
            android:text="@string/label_cheapest_placeholder"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
    </TableRow>
    <TableRow
        android:layout_marginTop="10dip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="2dip" >
        <TextView
            android:text="@string/label_fail"
            android:textSize="20sp"
            android:textStyle="bold|italic"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
        <TextView
            android:text="@string/label_expensive"
            android:textSize="20sp"
            android:textStyle="bold|italic"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
    </TableRow>
    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="2dip" >
        <TextView
            android:text="@string/label_fail_placeholder"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
        <TextView
            android:text="@string/label_expensive_placeholder"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
    </TableRow>
</TableLayout>